[package]
name = "itc-rs"
author = ["hirosassa <hiro.sassa@gmail.com>"]
description = "A CLI command to detect implicit type conversion from input SQL string for PostgreSQL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-std = { verson = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.6", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
postgres = "0.19.7"
serde = "1.0.188"
serde_json = "1.0.107"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "postgres" ] }
